[gd_scene load_steps=5 format=3 uid="uid://dd16yw701o3se"]

[ext_resource type="Script" uid="uid://cnuoxkvqgkjod" path="res://scripts/start_menu.gd" id="1_382lk"]
[ext_resource type="Texture2D" uid="uid://bkmvlxrirpc1x" path="res://assets/screen/Background.png" id="3_tpk76"]
[ext_resource type="Texture2D" uid="uid://chrgxn7x431g" path="res://assets/screen/Start Screen.png" id="3_wqgul"]
[ext_resource type="Texture2D" uid="uid://cbg86lnwqjv15" path="res://assets/screen/eyes.jpg" id="4_yf3ab"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_382lk")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_tpk76")
stretch_mode = 5

[node name="FilesWindow" type="TextureRect" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.75
offset_right = -0.00012207
offset_bottom = -6.10352e-05
mouse_filter = 2
texture = ExtResource("3_wqgul")
stretch_mode = 5

[node name="eyes" type="TextureRect" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.75
offset_left = 138.0
offset_top = 78.0
offset_right = -140.0
offset_bottom = -340.0
mouse_filter = 2
texture = ExtResource("4_yf3ab")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.51
anchor_right = 0.5
anchor_bottom = 0.51
offset_left = -76.0
offset_top = -2.0
offset_right = 76.0
offset_bottom = 204.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="PlayButton" type="Button" parent="VBoxContainer"]
z_index = 3
layout_mode = 2
size_flags_vertical = 0
focus_neighbor_top = NodePath("../QuitButton")
text = "Start"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
z_index = 3
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
z_index = 3
layout_mode = 2
focus_neighbor_bottom = NodePath("../PlayButton")
text = "Quit"

[connection signal="mouse_entered" from="VBoxContainer/PlayButton" to="." method="_on_play_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
